fixed display issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ h1 {
   max-width: 600px;
   border: 5px solid black;
   border-radius: 5px;
+  background: rgb(98, 172, 246);
 }
 
 .firstRow .currencyContainer{
@@ -75,13 +76,12 @@ select {
   /* margin-left: .5rem; */
   font-size: 1.3rem;
   /* appearance: none; */
-  background: rgb(98, 172, 246);
-  background-image: none;
+  /* background: rgba(98, 172, 246, 0); */
+  background: none;
   width: 100%;
   height: 50%;
   color: black;
   cursor: pointer;
-  overflow: wrap;
   z-index: 1;
   outline: none;
   border: none;
